# glfw-hello-world

./: CMakeLists.txt  main.cpp
include/glad/: glad.h
include/shaders/: shader.h
res/shaders/: invert.vs  shader.fs  shader.vs
src/: glad.c  main.cpp
